# myframework

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/exts/: CMakeLists.txt
code/exts/dirent/: CMakeLists.txt
code/exts/glew/: CMakeLists.txt
code/exts/glfw-3.1.1/: CMakeLists.txt
code/exts/imgui/: CMakeLists.txt
code/exts/imguizmo/: CMakeLists.txt  GraphEditor.cpp  ImGuizmo.cpp
code/exts/luajit/: CMakeLists.txt
code/exts/stb/: CMakeLists.txt
code/exts/stb_soil2/: CMakeLists.txt  SOIL2.c  SOIL2.h  stb_image.h  stb_image_write.h  stbi_DDS.h  stbi_DDS_c.h  stbi_pkm.h  stbi_pkm_c.h  stbi_pvr.h  stbi_pvr_c.h  stbi_qoi.h  stbi_qoi_c.h  texture_info.h
code/exts/stduuid/: CMakeLists.txt
code/exts/vector/: CMakeLists.txt
code/exts/xoshiro-cpp/: CMakeLists.txt
code/libs/App/: CMakeLists.txt  app.cc  app.h
code/libs/AssetRegistry/: AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt
code/libs/Bounds/: Bounds.cpp  Bounds.h  CMakeLists.txt  MinMax.h  OBBAABB.h
code/libs/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
code/libs/Component/: CMakeLists.txt  Component.cpp  Component.h
code/libs/Drawables/: BoundingBox.cpp  BoundingBox.h  BoundingBoxSystem.cpp  BoundingBoxSystem.h  Box.cpp  Box.h  CMakeLists.txt  Line.cpp  Line.h  LineSystem.cpp  LineSystem.h  OBBAABB.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointSystem.cpp  PointSystem.h
code/libs/DrawablesDebug/: BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Line.cpp  Line.h  Plane.cpp  Plane.h  Point.cpp  Point.h
code/libs/DrawablesSystems/: BoundingBoxSystem.cpp  BoundingBoxSystem.h  CMakeLists.txt  CircleSystem.cpp  CircleSystem.h  FastInstanceSystem.cpp  FastInstanceSystem.h  InstanceSystem.cpp  InstanceSystem.h  LineSystem.cpp  LineSystem.h  PointSystem.cpp  PointSystem.h
code/libs/GLwindow/: CMakeLists.txt  config.h  gl_window.cc  gl_window.h
code/libs/GLwindowd/: CMakeLists.txt  config.h  gl_window.cc  gl_window.h
code/libs/HalfEdgeMesh/: CMakeLists.txt  Edge.cpp  Edge.h  Face.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Vertex.h
code/libs/HalfEdgeMesh2D/: CMakeLists.txt  Edge.cpp  Edge.h  EdgeHC.cpp  EdgeHC.h  Face.cpp  Face.h  FaceHC.cpp  FaceHC.h  HalfEdgeMesh2D.cpp  HalfEdgeMesh2D.h  HalfEdgeMesh2DSquared.cpp  HalfEdgeMesh2DSquared.h  HalfEdgeMesh2DSquaredFast.cpp  HalfEdgeMesh2DSquaredFast.h  HalfEdgeMesh2DSquaredHC.cpp  HalfEdgeMesh2DSquaredHC.h  Optimization.cpp  Optimization.h  Vertex.cpp  Vertex.h
code/libs/HalfEdgeMesh2DSquared/: CMakeLists.txt  Face.cpp  Face.h  HalfEdgeMesh2D.cpp  HalfEdgeMesh2D.h  Vertex.h
code/libs/ImguiWrapper/: CMakeLists.txt  ImGuiWrapper.cpp  ImGuiWrapper.h
code/libs/Light/: Attenuation.h  BlurMode.h  CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  LightProperties.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
code/libs/Material/: CMakeLists.txt  Material.cpp  Material.h  Texture2D.cpp  Texture2D.h
code/libs/MaterialProfile/: CMakeLists.txt  MaterialProfile.cpp  MaterialProfile.h
code/libs/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h
code/libs/MyMathLib/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  Matrix3.cpp  Matrix3.h  Matrix3F.cpp  Matrix3F.h  Matrix4.cpp  Matrix4.h  Matrix4F.cpp  Matrix4F.h  MyMathLib.h  Quaternion.cpp  Quaternion.h  QuaternionF.cpp  QuaternionF.h  Vector2.cpp  Vector2.h  Vector2F.cpp  Vector2F.h  Vector3.cpp  Vector3.h  Vector3F.cpp  Vector3F.h  Vector4.cpp  Vector4.h  Vector4F.cpp  Vector4F.h  mLoc.h  quaternion.cpp  quaternion.h  quaternionF.cpp  quaternionF.h
code/libs/Node/: CMakeLists.txt  LineNode.cpp  LineNode.h  Node.cpp  Node.h
code/libs/Object/: CMakeLists.txt  Object.cpp  Object.h
code/libs/ObjectProfile/: CMakeLists.txt  ObjectProfile.cpp  ObjectProfile.h
code/libs/Particle/: CMakeLists.txt  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
code/libs/PoolParty/: Chunk.h  PoolParty.h
code/libs/RenderBuffer/: CMakeLists.txt  RenderBuffer.cpp  RenderBuffer.h
code/libs/RenderElement/: CMakeLists.txt  RenderElement.cpp  RenderElement.h
code/libs/RenderPass/: CMakeLists.txt  RenderPass.cpp  RenderPass.h
code/libs/RenderProfile/: CMakeLists.txt  RenderProfile.cpp  RenderProfile.h
code/libs/RigidBody/: CMakeLists.txt  RigidBody.cpp  RigidBody.h
code/libs/Script/: CMakeLists.txt  Script.cpp  Script.h
code/libs/ScriptsComponent/: CMakeLists.txt  ScriptsComponent.cpp  ScriptsComponent.h
code/libs/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
code/libs/ShaderBlock/: CMakeLists.txt  CPUBlockData.cpp  CPUBlockData.h  DataInfo.cpp  DataInfo.h  DataRegistry.cpp  DataRegistry.h  PropertyBuffer.cpp  PropertyBuffer.h  ShaderBlock.cpp  ShaderBlock.h  ShaderBlockData.cpp  ShaderBlockData.h
code/libs/Texture/: CMakeLists.txt  Texture.cpp  Texture.h
code/libs/TextureProfile/: CMakeLists.txt  TextureProfile.cpp  TextureProfile.h
code/libs/Vao/: CMakeLists.txt  Ebo.cpp  Ebo.h  ShaderDataType.cpp  ShaderDataType.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h
code/utils/CameraManager/: CMakeLists.txt  CameraManager.cpp  CameraManager.h
code/utils/DebugDraw/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h
code/utils/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
code/utils/FBOManager/: CMakeLists.txt  FBOManager.cpp  FBOManager.h  FrameBuffer.cpp  FrameBuffer.h
code/utils/Frustum/: Frustum.cpp  Frustum.h
code/utils/GraphicsManager/: CMakeLists.txt  (+2 more)
libs/Drawables/: CMakeLists.txt  Line.h  Point.h
libs/HalfEdgeMesh/: CMakeLists.txt  Face.cpp  Vertex.cpp
libs/HalfEdgeMesh2D/: CMakeLists.txt  Edge.cpp  Face.cpp  Face.h  HalfEdgeMesh2D.h  Vertex.cpp  Vertex.h
libs/Material/: CMakeLists.txt  Material.h
libs/Mesh/: CMakeLists.txt  Mesh.h
libs/MyMathLib/: CMakeLists.txt  Matrix3F.h  Matrix4.cpp  Matrix4F.cpp  Matrix4F.h  MyMathLib.h  OBBAABB.h  Vector2.cpp  Vector2.h  quaternion.h
libs/Node/: CMakeLists.txt  Node.cpp
libs/Object/: CMakeLists.txt
libs/PoolParty/: CMakeLists.txt  PoolParty.h
utils/DebugDraw/: CMakeLists.txt  DebugDraw.cpp
utils/Frustum/: CMakeLists.txt
utils/GraphicsManager/: CMakeLists.txt
utils/Scene/: CMakeLists.txt  Scene.h
(+52 files in other folders)
